--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,9 @@
     <string name="action_logout">Logout</string>
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
-    <string name="app_name">Test Program</string>
+    <string name="app_name">Academy of Science Music</string>
     <string name="confirm">Logout</string>
     <string name="decline">Back</string>
-    <string name="hello_world">Hello world!</string>
     <string name="login">Login</string>
     <string name="login_error">Error logging in. Please check that you have a solid internet connection and that your account has been created and verified.</string>
     <string name="login_fail">Invalid username or password</string>
@@ -14,6 +13,5 @@
     <string name="onoff">Dark Theme</string>
     <string name="pass">Password</string>
     <string name="remember">Remember me</string>
-    <string name="toast">Huzzah! A toast!</string>
     <string name="user">Username</string>
 </resources>
